# Auto-Wechat-Reply

./: .flake8  .gitignore  README.md  interface.py  pyproject.toml  setup.py
autoWechatReply/agent/: basic.py  reply.py
autoWechatReply/data/: messages.py
autowechatreply/agent/: __init__.py  basic.py  reply.py
autowechatreply/data/: messages.py
lib/itchat/: returnvalues.py  utils.py
lib/itchat/async_components/: contact.py  hotreload.py
lib/itchat/components/: contact.py  hotreload.py
tests/: test_llms.py  test_messages.py  test_reply.py
wechat/: __init__.py  config.json
