[tool.poetry]
name = "auto-wechat-reply"
version = "0.1.0"
description = ""
authors = ["Zepahn <dzx60090@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.17"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
