[tool.poetry]
name = "autoWechatReply"
version = "0.1.0"
description = ""
authors = ["Zephan <dzx60090@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.17"
pandas = "^2.2.2"
polars = "^0.20.25"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
