[tool.poetry]
name = "autoWechatReply"
version = "0.1.0"
description = ""
authors = ["Zephan <dzx60090@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.8.0"
langchain = "^0.1.17"
pandas = ">= 2.0.0"
polars = "^0.20.25"
langchain-openai = "^0.1.6"
gradio = "^4.31.5"
htmlparser = ">= 0.0.2"
pyqrcode = ">= 1.2.1"
qrcode = ">= 7.4.2 "

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
